# Intron-Afrispeech

./: .gitignore  pyproject.toml  submission-ji.csv
lightning_logs/version_0/: hparams.yaml
scripts/: callbacks.py  create-train-test-split.py  create-train-val-split.py  dataset.py  just-inference.py  model.py  predict.py  prepare-test-data.py  train.py  utils.py
scripts/core/: config.py
submissions/: submission-ji.csv  submission.csv
